# response-time-analysis

./: .gitignore  CommunicationAnalysis.hs  ResponseTimeAnalysis.hs  Structures.hs  analysis.sublime-project  noc-analysis.cabal  noc-solver.cabal  rta.hs  stack.yaml
data/: boxplot.py  ga_output_ga1.csv  ga_output_ga10.csv  ga_output_ga11.csv  ga_output_ga12.csv  ga_output_ga13.csv  ga_output_ga14.csv  ga_output_ga15.csv  ga_output_ga16.csv  ga_output_ga17.csv  ga_output_ga18.csv  ga_output_ga19.csv  ga_output_ga2.csv  ga_output_ga20.csv  ga_output_ga3.csv  ga_output_ga4.csv  ga_output_ga5.csv  ga_output_ga6.csv  ga_output_ga7.csv  ga_output_ga8.csv  ga_output_ga9.csv  grapher.py
src/: Analysis.hs  Coevolve.hs  CommunicationAnalysis.hs  Internal.hs  Main.hs  ResponseTimeAnalysis.hs  Structures.hs  Utils.hs
src/Analysis/: Internal.hs
src/Analysis/Internal/: CommunicationAnalysis.hs  ResponseTimeAnalysis.hs  Structures.hs  Utils.hs
src/Internal/: CommunicationAnalysis.hs  ResponseTimeAnalysis.hs  Structures.hs  Utils.hs
src/analysis/: Analysis.hs
src/analysis/Analysis/Internal/: CommunicationAnalysis.hs
src/evolution/: Main.hs
src/lib/: Analysis.hs  Coevolve.hs  Evolution.hs
src/lib/Analysis/Internal/: CommunicationAnalysis.hs  ResponseTimeAnalysis.hs  Structures.hs  Utils.hs
src/lib/Evolution/: Coevolve.hs  Evolve.hs
src/lib/Evolution/Internal/: Structures.hs  Utils.hs
src/solver/: Main.hs
tests/: CommunicationTests.hs  Main.hs  ResponseTimeTests.hs  Test.hs
