name:                noc-analysis
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/noc-analysis#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable noc-analysis
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Structures
                       , CommunicationAnalysis
                       , ResponseTimeAnalysis
  build-depends:       base >= 4.7 && < 5
                       , containers
