name:                noc-analysis
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/noc-analysis#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Analysis, Internal
  other-modules:       Internal.CommunicationAnalysis
                       , Internal.ResponseTimeAnalysis
                       , Internal.Structures
                       , Internal.Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Test.hs
  other-modules:       ResponseTimeTests
  build-depends:
      base >= 4 && < 5
    , containers  
    , tasty
    , tasty-hunit
    , noc-analysis
