name:                noc-analysis
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/noc-analysis#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable coevolve
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , random
                       , MonadRandom
                       , noc-analysis
                       , random-shuffle
  main-is:             Main.hs
  hs-source-dirs:      src/evolution

library
  hs-source-dirs:      src/analysis
  exposed-modules:     Analysis, Analysis.Internal
  other-modules:       Analysis.Internal.CommunicationAnalysis
                       , Analysis.Internal.ResponseTimeAnalysis
                       , Analysis.Internal.Structures
                       , Analysis.Internal.Utils
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , random
                       , MonadRandom
                       

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       ResponseTimeTests
                       , CommunicationTests
  build-depends:
      base >= 4 && < 5
    , containers  
    , tasty
    , tasty-hunit
    , noc-analysis
