name:                noc-solver
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/noc-analysis#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable solver
  hs-source-dirs:      src/solver
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , random
                       , MonadRandom
                       , noc-solver
                       , random-shuffle
                       , random-extras
                       , random-fu
                       , rvar
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  extensions:          BangPatterns, ScopedTypeVariables

library
  default-language:    Haskell2010
  hs-source-dirs:      src/lib
  exposed-modules:     Evolution, Analysis, Analysis.Internal
  other-modules:       Analysis.Internal.CommunicationAnalysis
                       , Analysis.Internal.ResponseTimeAnalysis
                       , Analysis.Internal.Structures
                       , Analysis.Internal.Utils
                       , Evolution.Coevolve
                       , Evolution.Internal.Structures
                       , Evolution.Internal.Utils
  build-depends:       base >= 4.7 && < 5
                       , containers
                       , random
                       , MonadRandom
                       , random-shuffle
                       , random-extras
                       , parallel
                       , deepseq
  extensions:          BangPatterns

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       ResponseTimeTests
                       , CommunicationTests
  build-depends:
      base >= 4 && < 5
    , containers  
    , tasty
    , tasty-hunit
    , noc-solver
